**11 Chore** Add global Sketch dowload link Add Sketch instructions, breadcrumb message to each component page > Design team to provide designs and unlblock Lucas

--- a/src/app/shared/table-of-contents/table-of-contents.scss
+++ b/src/app/shared/table-of-contents/table-of-contents.scss
@@ -55,6 +55,16 @@ a {
 .docs-level-h4 {
   margin-left: 12px;
 }
+
+.docs-sketch-link {
+  height: 18px;
+  width: 200px;
+  color: #ff4e00;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+}
+
 ::ng-deep {
   .docs-markdown-h3 {
     opacity: 0;
