--- a/src/assets/documents/components/badge.html
+++ b/src/assets/documents/components/badge.html
@@ -15,6 +15,9 @@
     Badges are small status descriptors for UI elements. A badge consists of a small circle, typically containing a number or
     other short set of characters, that appears in proximity to another object.
   </div>
+
+  <div class="doc-desc-1" sketch-link></div>
+  
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
