--- a/src/assets/documents/components/card.html
+++ b/src/assets/documents/components/card.html
@@ -18,6 +18,7 @@
     <p>Cards are a convenient means of displaying content composed of different elements. They’re also well-suited for showcasing
       elements whose size or supported actions vary, like photos with captions of variable length.</p>
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
