--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -11,9 +11,14 @@
   <div class="doc-title-1">
     Checkbox
   </div>
+
   <div class="doc-desc-1">
     Checkboxes allow the user to select one or more items from a set. Checkboxes can be used to turn an option on or off.
   </div>
+
+  <div class="doc-desc-1" sketch-link></div>
+
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
