--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -15,6 +15,7 @@
   <div class="doc-desc-1">
     Datepicker allow the user to enter a date or date range either through text input, or by choosing from the calendar.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Example
