--- a/src/assets/documents/components/feedbackindicator.html
+++ b/src/assets/documents/components/feedbackindicator.html
@@ -14,7 +14,9 @@
   <div class="doc-desc-1">
     Feedback indicator is used to inform user about important changes or persistent conditions. Feedback indicator shows at the
     top of the page or section they apply to.</div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
+
   </div>
   <div class="doc-title-2">
     Examples
