--- a/src/assets/documents/components/footer.html
+++ b/src/assets/documents/components/footer.html
@@ -15,6 +15,7 @@
     Footers are a great way to organize a lot of site navigation and information at the end of a page. This is where the user
     will look once they have finished scrolling through the current page or are looking for additional information about
     your website. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
