--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -15,6 +15,7 @@
     The approved icon set is a typeface called Material Icon Font, which provides flexible, scalable vector icons that can be
     plugged into any application without taxing the browser with a multitude of icon images.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
