--- a/src/assets/documents/components/login.html
+++ b/src/assets/documents/components/login.html
@@ -11,6 +11,7 @@
     Login  </div>
   <div class="doc-desc-1">
     Users are requires to login to fully access to Vizient MDA dashboards.  </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
