--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -19,6 +19,7 @@
       menu items based on the current state of the app.</p>
     <p>Menus should not be used as a primary method for navigation within an app.</p>
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
