--- a/src/assets/documents/components/progressbar.html
+++ b/src/assets/documents/components/progressbar.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Linear progress indicators display progress by animating an indicator along the length of a fixed, visible track. The behavior
     of the indicator is dependent on whether the progress of a process is known. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
