--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Circular progress indicators display progress by animating an indicator along an invisible circular track in a clockwise
     direction. They can be applied directly to a surface, such as a button or card. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
