--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -15,6 +15,7 @@
   <div class="doc-desc-1">
     Select allows users to select from a single-option menu. Select is a form control for selecting a value from a set of options.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
