--- a/src/assets/documents/components/sidenav.html
+++ b/src/assets/documents/components/sidenav.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     The sidenav components are designed to provide access to destinations in your app. They can either be permanently on-screen
     or controlled by a navigation menu icon.</div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
