--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -13,19 +13,57 @@
   </div>
   <div class="doc-desc-1">
     Sliders allow users to make selections from a range of values. </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
     Examples
+    <!-- <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span> -->
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
+
   <div class="doc-desc-2">
     Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
     ends of the bar that reflect a range of values. </div>
   <div class="doc-example-container">
     <div app-docs-example="slider-basic"></div>
   </div>
+
+  <!-- <div id="exampleWrapper">
+    <div class="doc-desc-2">
+      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+      ends of the bar that reflect a range of values. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-range"></div>
+    </div>
+    <div class="doc-desc-2">
+      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+      ends of the bar that reflect a range of values. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-basic"></div>
+    </div>
+    <div class="doc-desc-2">
+      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+      ends of the bar that reflect a range of values. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-basic"></div>
+    </div>
+    <div class="doc-desc-2">
+      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+      ends of the bar that reflect a range of values. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-basic"></div>
+    </div>
+    <div class="doc-desc-2">
+      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
+      ends of the bar that reflect a range of values. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-basic"></div>
+    </div>
+  </div> -->
+
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
@@ -119,7 +157,7 @@
 
 
 
- 
+
 
 
 </body>
