--- a/src/assets/documents/components/slidetoggle.html
+++ b/src/assets/documents/components/slidetoggle.html
@@ -13,6 +13,7 @@
     Slide Toggle </div>
   <div class="doc-desc-1">
     Slider Toggles are used for binary actions. They are commonly used for “On/Off” situations. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
