--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -16,6 +16,7 @@
     temporarily, towards the bottom of the screen. They shouldn’t interrupt the user experience, and they don’t require user
     input to disappear. They may contain a text action, but no icons. Only one snackbar may be displayed at a time.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
