--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Table provides a Vizient styled data-table that can be used to display rows of data. A data table contains a header row at
     the top that lists column names, followed by rows for data.</div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
