--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Tabs organize and allow navigation between groups of content that are related and at the same level of hierarchy.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
