--- a/src/assets/documents/components/toolbar.html
+++ b/src/assets/documents/components/toolbar.html
@@ -11,6 +11,7 @@
     Toolbar  </div>
   <div class="doc-desc-1">
     Toolbar displays information and actions relating to the current screen.  </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
