--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -13,6 +13,7 @@
   </div>
   <div class="doc-desc-1">
     Trees allow navigation between groups of content that are related and at the different level of hierarchy. </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
