--- a/src/app/shared/table-of-contents/table-of-contents.html
+++ b/src/app/shared/table-of-contents/table-of-contents.html
@@ -16,5 +16,6 @@
       [class.docs-active]="link.active" (click)="redirect(link.id)">
       {{link.name}}
     </a>
+    <a class="docs-sketch-link">Download Sketch File</a>
   </nav>
 </div>
