--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -15,6 +15,7 @@
     Buttons make common actions immediately visible and easy to perform with one click or tap. They can be used for any type
     of action, including navigation.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
