--- a/src/assets/documents/components/chip.html
+++ b/src/assets/documents/components/chip.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Chips are compact elements that represent an input, attribute, or action.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
