--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Expansion Panels contain creation flows and allow lightweight editing of an element.
   </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
