--- a/src/assets/documents/components/header.html
+++ b/src/assets/documents/components/header.html
@@ -15,6 +15,7 @@
   <div class="doc-desc-1">
     Header appears on top all other surfaces in an app, displaying information and actions globally or relating to the current
     screen. </div>
+  <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Examples
