--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -15,6 +15,7 @@
   <div class="doc-desc-1">
     Lists are a continuous group of text or images. They are composed of items containing primary and supplemental actions, which
     are represented by icons and text. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
