--- a/src/assets/documents/components/radio.html
+++ b/src/assets/documents/components/radio.html
@@ -14,6 +14,7 @@
   </div>
   <div class="doc-desc-1">
     Radio buttons allow the user to select one option from a set. </div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
