--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -14,6 +14,7 @@
   <div class="doc-desc-1">
     Steppers provides a wizard-like workflow by dividing content into logical steps. Steppers display progress through a sequence
     of logical and numbered steps. They may also be used for navigation.</div>
+    <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
