--- a/src/assets/examples/dialog-basic/dialog-contain.component.html
+++ b/src/assets/examples/dialog-basic/dialog-contain.component.html
@@ -15,7 +15,7 @@
     <div class="modal-checkbox-wrap">
 
       <div class="modal-selectall">
-        <mat-checkbox class="modal-selectall">Select All</mat-checkbox>
+        <mat-checkbox class="modal-selectall" [checked]="descendantsAllSelected({children: tree})" [indeterminate]="descendantsPartiallySelected({children: tree})" (change)="selectAll($event)">Select All</mat-checkbox>
       </div>
       
       <viz-tree [tree]="tree">
