--- a/libs/style.scss
+++ b/libs/style.scss
@@ -317,6 +317,12 @@ td.mat-cell,
     margin-top: 16px;
   }
 }
+.cdk-overlay-pane {
+  .mat-snack-bar-container {
+    border-radius: 0px
+  }
+}
+
 .viz-snackbar-mobile {
   width: 343px !important;
   .mat-simple-snackbar {
