Fix Bug : Snackbar: desktop  -->. "- there should be no border radius - capital ""B""" Snackbar: mobile --> incorrect spacing. please see reference link Snackbar: design specs	 --> please update to new Design Specs image

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -326,9 +326,12 @@ td.mat-cell,
 .viz-snackbar-mobile {
   width: 343px !important;
   .mat-simple-snackbar {
+    span {
+      width: 255px;
+    }
     flex-direction: column;
     .mat-simple-snackbar-action {
-      margin-left: auto;
+      margin-left: 230px;
     }
   }
 }
