--- a/src/assets/documents/components/snackbar.html
+++ b/src/assets/documents/components/snackbar.html
@@ -193,8 +193,8 @@
     <img src="assets/img/doc/snack-pc-spec.png" alt="">
   </div>
 
-  <div class="docs-usage-spec docs-usage-center docs-mt16" style="height:280px">
-      <img src="assets/img/doc/snack-mobile-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center docs-mt16" style="height:280px;">
+      <img src="assets/img/doc/snack-mobile-spec.png" alt="" style="left:-265px;max-width:fit-content">
     </div>
 
   
