Fix Bug : Form Field description --> text color should be #000000

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -373,6 +373,11 @@ td.mat-cell,
   border-color: #9f9f9f !important;
 }
 //input font-size
+.mat-form-field-infix {
+  textarea {
+    color: #000000;
+  }
+}
 // body {
 //   font-size: 14px;
 // }
