**5. Chore** Link Master Sketch File in the Toolkit Host on server, with direct download link >http://take.ms/H3ob0 >@Design to provide file to Ben

--- a/src/app/shared/table-of-contents/table-of-contents.html
+++ b/src/app/shared/table-of-contents/table-of-contents.html
@@ -16,6 +16,6 @@
       [class.docs-active]="link.active" (click)="redirect(link.id)">
       {{link.name}}
     </a>
-    <a class="docs-sketch-link">Download Sketch File</a>
+    <a class="docs-sketch-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sketch File</a>
   </nav>
 </div>
