--- a/src/assets/documents/components/designers.html
+++ b/src/assets/documents/components/designers.html
@@ -27,8 +27,8 @@
   <div class="doc-bold-title">
     Download the UI toolkit
   </div>
-  <div class="doc-desc-2">
-    <span class="doc-desc-2-highlight-text">Download Sketch file</span> from Vizient toolkit repo.
+  <div class="doc-desc-2"> 
+    <a href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch" class="doc-desc-2-highlight-text">Download Sketch file</a> from Vizient toolkit repo.
   </div>
 
 
