Fix Bug : Single Datepicker

--- a/libs/components/date-range-picker/viz-date-range-picker.component.scss
+++ b/libs/components/date-range-picker/viz-date-range-picker.component.scss
@@ -24,7 +24,7 @@
   }
 }
 ::ng-deep {
-  div[ng-reflect-ng-switch="multi-year"] {
+  div[ng-reflect-ng-switch="multi-year"],div[ng-reflect-ng-switch="year"] {
     .mat-calendar-table{
       margin-top: 38px;
     }
