Copy writing : Toolkit Documentation: LandingPage

--- a/src/app/pages/homepage/homepage.html
+++ b/src/app/pages/homepage/homepage.html
@@ -2,17 +2,21 @@
   <div class="home-sec-1">
     <div class="text-item">
       <h1>Vizient Components for the Web</h1>
-      <p>The system includes the resources to create user interfaces consistent with the Vizient app principles, design language, and best practices. Rather than focusing on pixels, developers can focus on application logic, while designers can focus on user experience, interactions, and flows.</p>
+      <p>
+        The toolkit system includes the resources needed to create user interfaces consistent with the Vizient’s product principles,
+        design language, and best practices. Rather than focusing on pixels, developers can focus on the application logic,
+        while designers can focus on user experiences, interactions, and flows.
+      </p>
       <div class="button-sec">
         <button (click)="routeTo('/documentation/designers')" mat-raised-button color="primary">Get Started</button>
         <button mat-button color="primary" (click)="routeTo('/components')">Components</button>
       </div>
     </div>
     <div class="svg-item">
-     <div id="hero"></div>
+      <div id="hero"></div>
     </div>
   </div>
-  
+
   <div class="home-sec-2">
     <div>
       <div class="docs-feature-thumb">
@@ -20,7 +24,7 @@
         <div id="accurate"></div>
       </div>
       <h3>Accurate & up to date</h3>
-      <p>Implement Vizient Toolkit with pixel-perfect components, maintained by iLabs engineers and designers</p>
+      <p>Implement the Vizient Toolkit with pixel-perfect components, maintained by the Toolkit Management Team.</p>
     </div>
     <div>
       <div class="docs-feature-thumb">
@@ -28,7 +32,8 @@
         <div id="seamless"></div>
       </div>
       <h3>Seamless integrations</h3>
-      <p>Use components designed to work in any context, allowing seamless integrations with Angular.</p>
+      <p>Use components designed to work in any context allowing seamless integration with libraries like React, AngularJS,
+        and server-side rendering.</p>
     </div>
     <div>
       <div class="docs-feature-thumb">
@@ -36,8 +41,7 @@
         <div id="standarts"></div>
       </div>
       <h3>Industry standards</h3>
-      <p>Take advantage of components developed with minimal dependencies and tested for flexibility, accessibility, and internationalization</p>
+      <p>Take advantage of components developed with minimal dependencies and tested for flexibility, accessibility, and internationalization.</p>
     </div>
   </div>
 </div>
-
