--- a/src/assets/documents/components/designers.html
+++ b/src/assets/documents/components/designers.html
@@ -12,8 +12,8 @@
     Designers
   </div>
   <div class="doc-desc-1">
-    The purpose of the Toolkit Material Library is to streamline the process of Vizient’s design and development workflow. It
-    is a crucial resource and acts as the ‘source for truth’ for all UI components that Vizient products are comprised of.
+    The purpose of the Toolkit Material Library is to streamline the process of Vizient’s design workflow. It is a crucial resource
+    and acts as the ‘source for truth’ for all UI components for which Vizient products are comprised of.
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
@@ -27,7 +27,7 @@
   <div class="doc-bold-title">
     Download the UI toolkit
   </div>
-  <div class="doc-desc-2"> 
+  <div class="doc-desc-2">
     <a href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch" class="doc-desc-2-highlight-text">Download Sketch file</a> from Vizient toolkit repo.
   </div>
 
@@ -105,8 +105,17 @@
       Sketch document using the Sketch Palettes plugin.
     </p>
   </div>
-  
+
   <img src="assets/img/doc/designers_color.svg" height="637" width="844" class="docs-mt16" alt="">
+
+  <div class="doc-desc-2">
+    <p>
+      The toolkit system includes the resources needed to create user interfaces consistent with the Vizient’s product principles,
+      design language, and best practices. Rather than focusing on pixels, developers can focus on the application logic,
+      while designers can focus on user experiences, interactions, and flows.
+    </p>
+
+  </div>
 
 
 </body>
