--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -13,7 +13,7 @@
     Datepicker
   </div>
   <div class="doc-desc-1">
-    Datepicker allow the user to enter a date or date range either through text input, or by choosing from the calendar.
+      The Datepicker component allows the user to enter a date or date range either through text input or by choosing from the calendar.
   </div>
   <div class="doc-desc-1" sketch-link></div>
   <div class="doc-divider"></div>
@@ -25,7 +25,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Use in forms to let user enter a date.
+      Use in forms to allow the user to enter a date or date range.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="date-picker-single"></div>
@@ -48,7 +48,7 @@
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
-    To get a customized datepicker, just set
+      To get a customized datepicker, just set
     <span class="doc-desc-2-highlight">date/onApply</span>
   </div>
   <table class="doc-props-table">
@@ -83,23 +83,23 @@
   </div>
 
   <div class="doc-desc-2">
-    Datepicker should:
+      The Datepicker component should:
     <ul class="doc-list">
-      <li>Allowe user to input a date or date range.</li>
-      <li>Be inputed through text input, or by choosing date from calendar.</li>
-      <li>Always display current date.</li>
+      <li>Allow user to input a date or date range.</li>
+      <li>Be inputed through text input or by choosing date from calendar.</li>
+      <li>Always display the current date by default.</li>
     </ul>
   </div>
 
   <div class="doc-divider"></div>
 
   <div class="doc-title-2">
-    Usage & Content guidelines
+    Usage & Content Guidelines
     <span class="docs-markdown-h3" id="content_guidelines">
-      <span header-link="content_guidelines"></span>Content guidelines</span>
+      <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    Always disable the date that user cannot interact with.
+      Always disable the dates that the user should not be able interact with.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do docs-usage-w50 docs-usage-center" style="height:291px">
@@ -111,9 +111,9 @@
   </div>
   <div class="doc-divider"></div>
   <div class="doc-title-2">
-    Design specs
+    Design Specs
     <span class="docs-markdown-h3" id="design_specs">
-      <span header-link="design_specs"></span>Design specs</span>
+      <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
   <div class="docs-usage-spec docs-usage-center" style="height:635px">
