4. Chore Disable selected state for responsive icons https://screencast.com/t/SZPE41ujpAD Do not allow cursor to change to select style on hover: http://take.ms/6orh9

--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -109,7 +109,7 @@
     .mat-icon {
       @include md-icon-size(18px);
       margin-left: 12px;
-      cursor: pointer;
+      // cursor: pointer;
     }
   }
 
